# univrses_racing_hackaton

./: Cargo.toml
.cargo/: config.toml
car/src/: car.rs  res.rs
client/: main.py
hackaton/: Cargo.toml  README.md
hackaton/src/: lib.rs  shared_systems.rs
host/: Cargo.toml
host/src/: lib.rs  server.rs
src/: input.rs  lib.rs  main.rs  server.rs
