[package]
name = "hackaton"
version = "0.1.0"
edition = "2024"

[[bin]]
name="hackaton"
path = "src/bin/hackaton.rs"

[features]
graphics = []
default = ["graphics"]


[dependencies]
bevy = {workspace = true}
bevy_garage_car = {workspace = true}
bevy_garage_camera = { workspace = true }
bevy_garage_track = {workspace = true}
bevy_rapier3d = { workspace = true, features = ["debug-render-3d"] }
bevy_renet = {git="https://github.com/lucaspoffo/renet", rev = "7331a9ec76ce0ee4dab17efdb69a0c1c65b7b4f3" }
renet_visualizer = { git = "https://github.com/lucaspoffo/renet", rev = "7331a9ec76ce0ee4dab17efdb69a0c1c65b7b4f3", features = [
    "bevy",
] }
serde = {workspace = true}
bevy_egui = { version = "0.28.0" }
bincode = "1.3.3"

